<?xml version="1.0" encoding="utf-8"?><!--
  ~
  ~        ___                       ___       ___
  ~       /\  \          ___        /\__\     /\__\
  ~       \:\  \        /\  \      /:/  /    /:/  /
  ~        \:\  \       \:\  \    /:/  /    /:/  /
  ~         \:\  \      /::\__\  /:/  /    /:/  /  ___
  ~   _______\:\__\  __/:/\/__/ /:/__/    /:/__/  /\__\
  ~   \::::::::/__/ /\/:/  /    \:\  \    \:\  \ /:/  /
  ~    \:\~~\~~     \::/__/      \:\  \    \:\  /:/  /
  ~     \:\  \       \:\__\       \:\  \    \:\/:/  /
  ~      \:\__\       \/__/        \:\__\    \::/  /
  ~       \/__/                     \/__/     \/__/
  ~
  ~  Copyright (C) 2019 ZiLu https://github.com/zhongzilu
  ~
  ~  Licensed under the Apache License, Version 2.0 (the "License");
  ~  you may not use this file except in compliance with the License.
  ~  You may obtain a copy of the License at
  ~
  ~       http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~  Unless required by applicable law or agreed to in writing, software
  ~  distributed under the License is distributed on an "AS IS" BASIS,
  ~  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~  See the License for the specific language governing permissions and
  ~  limitations under the License.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_kaijiang"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_kaijiang" />

    <item
        android:id="@+id/navigation_trick"
        android:icon="@drawable/ic_skill_black_24dp"
        android:title="@string/title_trick" />

    <!--    <item-->
    <!--        android:id="@+id/navigation_notifications"-->
    <!--        android:icon="@drawable/ic_notifications_black_24dp"-->
    <!--        android:title="@string/title_notifications" />-->

    <item
        android:id="@+id/navigation_group"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_group" />

    <item
        android:id="@+id/navigation_mine"
        android:icon="@drawable/ic_person_black_24dp"
        android:title="@string/title_mine" />

</menu>
