<?xml version="1.0" encoding="utf-8"?><!--
  ~
  ~        ___                       ___       ___
  ~       /\  \          ___        /\__\     /\__\
  ~       \:\  \        /\  \      /:/  /    /:/  /
  ~        \:\  \       \:\  \    /:/  /    /:/  /
  ~         \:\  \      /::\__\  /:/  /    /:/  /  ___
  ~   _______\:\__\  __/:/\/__/ /:/__/    /:/__/  /\__\
  ~   \::::::::/__/ /\/:/  /    \:\  \    \:\  \ /:/  /
  ~    \:\~~\~~     \::/__/      \:\  \    \:\  /:/  /
  ~     \:\  \       \:\__\       \:\  \    \:\/:/  /
  ~      \:\__\       \/__/        \:\__\    \::/  /
  ~       \/__/                     \/__/     \/__/
  ~
  ~  Copyright (C) 2019 ZiLu https://github.com/zhongzilu
  ~
  ~  Licensed under the Apache License, Version 2.0 (the "License");
  ~  you may not use this file except in compliance with the License.
  ~  You may obtain a copy of the License at
  ~
  ~       http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~  Unless required by applicable law or agreed to in writing, software
  ~  distributed under the License is distributed on an "AS IS" BASIS,
  ~  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~  See the License for the specific language governing permissions and
  ~  limitations under the License.
  -->

<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="zilu.lottery.analysis.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_kaijiang"
        android:name="zilu.lottery.analysis.ui.release.ReleaseFragment"
        android:label="@string/title_kaijiang"
        tools:layout="@layout/fragment_release" />

    <fragment
        android:id="@+id/navigation_trick"
        android:name="zilu.lottery.analysis.ui.trick.TrickFragment"
        android:label="@string/title_trick"
        tools:layout="@layout/fragment_trick" />

    <!--    <fragment-->
    <!--        android:id="@+id/navigation_notifications"-->
    <!--        android:name="zilu.lottery.analysis.ui.notifications.NotificationsFragment"-->
    <!--        android:label="@string/title_notifications"-->
    <!--        tools:layout="@layout/fragment_notifications" />-->
    <fragment
        android:id="@+id/navigation_group"
        android:name="zilu.lottery.analysis.ui.group.GroupFragment"
        android:label="@string/title_group"
        tools:layout="@layout/fragment_group" />

    <fragment
        android:id="@+id/navigation_mine"
        android:name="zilu.lottery.analysis.ui.mine.MineFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_mine" />
</navigation>
